# fsds

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/fsds/: __init__.py  client.py  types.py  utils.py
